truncate class correction

--- a/public/css/override.less
+++ b/public/css/override.less
@@ -133,6 +133,8 @@ body div[role='main'].homepage .featured .featured-box .featured-meta .img-exhib
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  width: 90%;
+  display: block;
 }
 
 /* About */
